--- a/first/index.html
+++ b/first/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>First Part</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
     <div>
 
         <section>
-            
+
         </section>
 
         <footer>
